public/styles/site/_forms.scss
// Handle messed up styles on all forms pages entered through the WYSIWYG editor
form > div {
    clear: both;
}

.form-group {
  margin-bottom: 15px;
}

.checkbox-inline,
.radio-inline {
    position: relative;
    display: inline-block;
    padding-left: 20px;
    margin-bottom: 0;
    margin-top: 0;
    font-weight: 400;
    vertical-align: middle;
    cursor: pointer;
}

.checkbox-inline+.checkbox-inline,
.radio-inline+.radio-inline {
    margin-top: 0;
    margin-left: 10px;
}

.checkbox input[type=checkbox],
.checkbox-inline input[type=checkbox],
.radio input[type=radio],
.radio-inline input[type=radio] {
    position: absolute;
    margin-top: 4px\9;
    margin-left: -20px;
}

.input-inline {
    display: inline-block;
    padding: 5px;
    width: auto;
}
.indented-text {
    position:relative
}
.indent-text {
    position: relative;
    top: -15px;
    left: 55px;
}
.top-label {
    margin-bottom: 5px;
}
select {
    height: 27px;
}

@media all and (max-width: 768px) {

    .marg-bottom-xs-5 {
        margin-bottom: 5px;
    }
}

